Mon Mar 26 21:25:07 UTC 2007  Scott Harris <harris_s@ociweb.com>

        * DDS_release_notes.txt:
        
          Add some known problems to the release notes.
          
Mon Mar 26 16:05:36 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        
          Fixed a bug on registration sample marshalling when data type has 
          unbounded size and registers with variable size data. The problem is
          the serialization buffer does not allocate enough memory for the 
          registered sample.

        * DDS_release_notes.txt:
        
          Added the bug fix to release note.

Fri Mar 23 15:13:43 UTC 2007  Ciju John  <johnc@ociweb.com>

        * dds/InfoRepo/UpdateManager.h:
        * dds/InfoRepo/UpdateManager.cpp:
	  Made the UpdateManager a local service.

        * dds/InfoRepo/Update_export.h:
          Removed this file.

Thu Mar 22 14:18:12 UTC 2007  Ciju John  <johnc@ociweb.com>

        * dds/InfoRepo/UpdateManager.cpp:
          Include pre compiled headers.

        * tests/DCPS/Messenger_IOGR_Imr/publisher.cpp:
          Use the portable variant of the structure used for quering file
          stat().

Thu Mar 22 13:46:57 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Qos_Helper.inl: untabified

Wed Mar 21 22:13:32 UTC 2007  Ciju John  <johnc@ociweb.com>

        * dds/InfoRepo/DCPSInfo_i.cpp:
          Register with the UpdateManager.

        * dds/InfoRepo/UpdateManager.h:
        * dds/InfoRepo/UpdateManager.cpp:
        * dds/InfoRepo/Update_export.h:
          Framework for dealing with Persistence and federation menagers.

Wed Mar 21 18:06:01 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * dds/InfoRepo/DCPSInfoRepo.cpp:

          Changed return value of an ACE_ERROR_RETURN macro
          to eliminate an int-to-bool warning on VC8.

        * dds/DCPS/Qos_Helper.inl:

          Changes to eliminate time_t-to-CORBA::Long conversion
          warnings on VC8.
