@@ -506,8 +506,9 @@ ACE_Message_Block*
     // block.
 
     ACE_NEW_RETURN (mb,
-                    marshaled_size_ ? marshaled_size_ :
-                                      _dcps_find_size(instance_data),
+                    ACE_Message_Block(
+                               marshaled_size_ ? marshaled_size_ :
+                                           _dcps_find_size(instance_data) ),
                     0);
   }
 
